Extract theme questions to classes